add markdown tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Page Title</title>
 </head>
 <body>
-	<h1>Page is live</h1>
+	<md-block>
+ # Page is live! Now with markdown.
+  </md-block>
+	<script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </body>
 </html>
