--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Page Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MATA Ambassadors</title>
+  <link rel="stylesheet" href="homepage.css"
 </head>
 <body>
-	<md-block>
- # Page is live! Now with markdown.
-  </md-block>
-	<script type="module" src="https://md-block.verou.me/md-block.js"></script>
+
+  <div class="navbar">
+    <ul>
+      <li><a href="#findaride">Find A Ride</a></li>
+      <!-- include info on how to see current available tickets, ticket prices, and how to get reduced fare here-->
+      <li><a href="#wheresmybus">Where's My Bus?</a></li>
+      <!--include info on trip planner, mata tracker, and omnilert -->
+      <li><a href="#getintouch">Get In Touch</a></li>
+    </ul>
+  </div>
+
+  <header class="hero">
+    <div class="hero-content">
+        <h1 class="hero-title">MATA Ambassadors</h1>
+        <p class="hero-subtitle">Connecting communities, one ride at a time.</p>
+        <a href="#findaride" class="cta-btn">Get Started</a>
+    </div>
+  </header>
+
+  <section id="findaride">
+    <h3>Buy A Ticket</h3>
+    <li>
+        Visit the bus company’s website or mobile app, select your route, date, and time, then choose your ticket type. Enter your payment details, and you’ll receive an e-ticket instantly that you can show directly from your phone or email when boarding.</li>
+    <li>
+        At the Bus Station: Visit the ticket counter at your nearest bus station. The staff will assist you in selecting your route and ticket type, and you can pay using cash, credit, or debit card.
+    </li>
+    <li>
+        Onboard: Some bus services allow you to purchase tickets directly from the driver, usually with cash. However, it’s recommended to buy your ticket in advance to avoid delays.
+    </li>
+  </section>
+
 </body>
 </html>
