--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
 
   <div class="navbar">
-    <ul>
+	<img class="logo" src="./assets/logo.webp" alt="logo"/>
+  <ul>
       <li><a href="#findaride">Find A Ride</a></li>
       <!-- include info on how to see current available tickets, ticket prices, and how to get reduced fare here-->
       <li><a href="#wheresmybus">Where's My Bus?</a></li>
       <!--include info on trip planner, mata tracker, and omnilert -->
       <li><a href="#getintouch">Get In Touch</a></li>
-    </ul>
+  </ul>
   </div>
 
   <header class="hero">
