add plan your trip section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <ul>
       <li><a href="#findaride">Find A Ride</a></li>
       <!-- include info on how to see current available tickets, ticket prices, and how to get reduced fare here-->
+			<li><a href="#plan">Plan Your Trip</a></li>
       <li><a href="#wheresmybus">Where's My Bus?</a></li>
       <!--include info on trip planner, mata tracker, and omnilert -->
       <li><a href="#getintouch">Get In Touch</a></li>
@@ -62,6 +63,59 @@
       <p>All passes are non-refundable, non-replaceable, and non-exchangeable. For more info, call 901-523-8134.</p>
 
   </section>
+	<section id="plan">
+	<h2>How to Plan Your Trip</h2>
+ <h3>Using Google Maps Trip Planner for Your Bus Trip:</h3>
+	<ol>
+		<li>Open Google Maps:<br />  
+   	Access Google Maps via the app on your smartphone or <a href="https://maps.google.com">here</a>.</li>
+		<li> Enter Your Starting Point and Destination:<br />  
+   		<ul>
+				<li>Tap the search bar and input your starting location. You can type an address, a landmark, or use "Your location" for your current position.</li> 
+   			<li>Enter your destination in the same way.</li>
+			</ul></li>
+
+		<li> Select Directions:<br />  
+   		<ul>
+				<li>Tap the "Directions" button (blue arrow icon).</li>  
+   			<li>Ensure the transit icon (train or bus) is selected at the top to view public transit options.</li>
+			</ul></li>
+
+		<li>Set Your Departure or Arrival Time (Optional):<br />
+			<ul>
+				<li>Tap "Leave now" to adjust your trip for a specific time.</li>  
+   			<li>Choose "Depart at" or "Arrive by" and set the desired time and date.</li>
+			</ul></li>
+
+		<li>Review Transit Options:<br />
+			<ul>  
+   			<li>Google Maps will display a list of routes, including buses, trains, or a combination.</li>  
+   			<li>Check details like departure times, route numbers, stops, and travel duration.</li>
+			</ul></li>
+
+		<li>Select a Route:<br />  
+   		<ul>
+				<li>Tap your preferred route to view step-by-step instructions, including walking directions to the bus stop, transfer points, and final destination.</li>
+			</ul></li>
+
+		<li>Start Your Trip:<br />  
+			<ul>
+				<li>Hit "Start" to follow live navigation, which will provide updates on stops and notify you when to transfer or get off the bus.</li>
+			</ul></li> 
+
+		<li>Adjust Preferences (Optional):<br />  
+			<ul>
+				<li>Tap "Options" to filter routes by mode (e.g., bus only) or avoid certain features (e.g., fewer transfers).</li>
+			</ul></li>
+</ol>
+
+<h3>Tips:</h3>
+<ul>
+	<li>Real-Time Updates: Google Maps often shows live bus tracking and delays where available.</li> 
+	<li>Save Your Trip: Bookmark or save the route for future reference.</li>  
+	<li>Offline Maps: Download maps in advance if traveling to an area with limited connectivity.</li>  
+</ul>
+	</section>
 	<section id="wheresmybus">
 		<h2>Where's my bus?</h2>
 	</section>
