add ready section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="#findaride">Find A Ride</a></li>
       <!-- include info on how to see current available tickets, ticket prices, and how to get reduced fare here-->
 			<li><a href="#plan">Plan Your Trip</a></li>
+			<li><a href="#ready">Ready!</a></li>
       <li><a href="#wheresmybus">Where's My Bus?</a></li>
       <!--include info on trip planner, mata tracker, and omnilert -->
       <li><a href="#getintouch">Get In Touch</a></li>
@@ -115,6 +116,11 @@
 	<li>Save Your Trip: Bookmark or save the route for future reference.</li>  
 	<li>Offline Maps: Download maps in advance if traveling to an area with limited connectivity.</li>  
 </ul>
+	</section>
+	<section id="ready">
+		<h2>Ready! by MATA</h2>
+			<p>Similar to ride services like Uber® or Lyft®, Ready! by MATA will pick you up and drop you off at any location within the zones indicated below. It will come directly to you at the same low cost as a bus ticket. While no advanced reservation is required, you have the option to book a ride using the Ready! by MATA app or by calling (901) 322-0466. The reservation line is available Monday through Saturday, 6 a.m. – 6:30 p.m. Reservations for Monday service must be made before 6:30 p.m. on Saturday.</p>
+			<p>Note: When booking through the reservation line, a representative will inform you of your expected pick-up time</p>
 	</section>
 	<section id="wheresmybus">
 		<h2>Where's my bus?</h2>
