add ready image

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
 		<h2>Ready! by MATA</h2>
 			<p>Similar to ride services like Uber® or Lyft®, Ready! by MATA will pick you up and drop you off at any location within the zones indicated below. It will come directly to you at the same low cost as a bus ticket. While no advanced reservation is required, you have the option to book a ride using the Ready! by MATA app or by calling (901) 322-0466. The reservation line is available Monday through Saturday, 6 a.m. – 6:30 p.m. Reservations for Monday service must be made before 6:30 p.m. on Saturday.</p>
 			<p>Note: When booking through the reservation line, a representative will inform you of your expected pick-up time</p>
+		<h3>See Frayser Ready! area below:</h3>
+		<div class="ready-image-div">
+			<img src="./assets/ready-zone.jpg" alt="ready zone" class="ready-image"/>
+		</div>
 	</section>
 	<section id="wheresmybus">
 		<h2>Where's my bus?</h2>
