add bus routes and additional titles

--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
 
   <header class="hero">
     <div class="hero-content">
-        <h1 class="hero-title">MATA Ambassadors</h1>
+        <h1 class="hero-title">MATA Ambassadors<br />
+				<em>Frayser</em></h1>
+
         <p class="hero-subtitle">Connecting communities, one ride at a time.</p>
         <a href="#findaride" class="cta-btn">Get Started</a>
     </div>
   </header>
 
   <section id="findaride">
+	<p class="update-text">Last Updated: November 16, 2024</p>
 		<h2>Find a Ride</h2>
+		<h3>Frayser Bus Routes:</h3>
+		<div class="ready-image-div">
+			<img src="./assets/bus-routes.jpg" alt="bus routes" class="bus-routes-image"/>
+		</div>
     <h3>Buy A Ticket</h3>
     <p><em>General note - the farebox at the front of the bus accepts cash fares and passes but does not provide change. Please have the exact fare ready, as bus operators cannot handle money or make change. Pennies and foreign objects are not accepted.</em></p>
 
@@ -132,6 +139,9 @@
 	<section id="getintouch">
 		<h2>Get in Touch</h2>
 	</section>
+	<p class="update-text">A project of Hack Memphis 2024<br />
+	Team Dataforce<br />
+	Justin Carter, Arlinda Ibezim, Sri Lakshmi Bhavani Mandalapu, Naim Hakeem, Antwoine Clark</p>
 
 </body>
 </html>
