add get in touch section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,29 @@
 	</section>
 	<section id="getintouch">
 		<h2>Get in Touch</h2>
+			<p>MATA Call Center and Customer Relations Department<br /> 
+			(901) 522-9175 or <a href="mailto:ridersfirst@matatransit.com" alt="email">email here</a><br />
+			<br />
+			Hearing and Speech Impaired<br />
+			(901) 523-2817<br />
+			<br />
+			MATA Locations<br />
+			Administrative Offices<br />
+			One Commerce Square Building<br />
+			40 S. Main Street<br />
+ 			<br />
+			Operations Center<br />
+			1370 Levee Road<br />
+ 			<br />
+			Airways Transit Center<br />
+			3033 Airways Boulevard<br />
+ 			<br />
+			American Way Transit Center<br />
+			3921 American Way<br />
+ 			<br />
+			William Hudson Transit Center<br />
+			444 N. Main Street</p>
+
 	</section>
 	<p class="update-text">A project of Hack Memphis 2024<br />
 	Team Dataforce<br />
