--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="navbar">
-	<img class="logo" src="./assets/logo.webp" alt="logo"/>
+	<img class="logo" src="./assets/logo.jpeg" alt="logo"/>
   <ul>
       <li><a href="#findaride">Find A Ride</a></li>
       <!-- include info on how to see current available tickets, ticket prices, and how to get reduced fare here-->
