--- a/index.html
+++ b/index.html
@@ -1,171 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MATA Ambassadors</title>
-  <link rel="stylesheet" href="homepage.css"
-</head>
-<body>
-
-  <div class="navbar">
-	<img class="logo" src="./assets/logo.jpeg" alt="logo"/>
-  <ul>
-      <li><a href="#findaride">Find A Ride</a></li>
-      <!-- include info on how to see current available tickets, ticket prices, and how to get reduced fare here-->
-			<li><a href="#plan">Plan Your Trip</a></li>
-			<li><a href="#ready">Ready!</a></li>
-      <li><a href="#wheresmybus">Where's My Bus?</a></li>
-      <!--include info on trip planner, mata tracker, and omnilert -->
-      <li><a href="#getintouch">Get In Touch</a></li>
-  </ul>
-  </div>
-
-  <header class="hero">
-    <div class="hero-content">
-        <h1 class="hero-title">MATA Ambassadors<br />
-				<em>Frayser</em></h1>
-
-        <p class="hero-subtitle">Connecting communities, one ride at a time.</p>
-        <a href="#findaride" class="cta-btn">Get Started</a>
-    </div>
-  </header>
-
-  <section id="findaride">
-	<p class="update-text">Last Updated: November 16, 2024</p>
-		<h2>Find a Ride</h2>
-		<h3>Frayser Bus Routes:</h3>
-		<div class="ready-image-div">
-			<img src="./assets/bus-routes.jpg" alt="bus routes" class="bus-routes-image"/>
-		</div>
-    <h3>Buy A Ticket</h3>
-    <p><em>General note - the farebox at the front of the bus accepts cash fares and passes but does not provide change. Please have the exact fare ready, as bus operators cannot handle money or make change. Pennies and foreign objects are not accepted.</em></p>
-
-	<h3>Options to buy a ticket:</h3>
-	<ul>
-    <li>Online: Visit <a href="https://www.go901transit.com/" target="_blank">Go 901 Transit</a> or the MATA Go901 mobile app to buy your ticket. Choose your ticket type, enter your payment details, and you’ll receive an e-ticket instantly that you can show directly from your phone or email when boarding.</li>
-    <li>At the Bus Station: Visit the ticket counter at your nearest bus station. The staff will assist you in selecting your route and ticket type, and you can pay using cash, credit, or debit card.</li>
-    <li>Onboard: Some bus services allow you to purchase tickets directly from the driver, usually with cash. However, it’s recommended to buy your ticket in advance to avoid delays.</li>
-	</ul>
-
-    <h3>Ticket Prices</h3>
-	<ul>
-		<li>Adult Base Fare  	$1.00</li>
-    <li>Student Base Fare	$1.00</li>
-    <li>Senior Citizens(see note) 	$0.50</li>             
-    <li>Senior Daily Fast Pass 	$1.00</li>             
-    <li>Individuals with Disabilities(see note) 	$0.50</li>              
-    <li>Daily Fast Pass	$2.00</li>              
-    <li>Student Daily Fast Pass	$2.00</li>              
-    <li>MATAplus Base Fare	$2.00</li>
-	</ul>
-
-    <p>MATA offers reduced fares for students (grades 1-12), senior citizens (65+), and individuals with disabilities on fixed route buses and trolleys. A valid MATA ID card is required for eligibility, which costs $3 and can be processed at the William Hudson Transit Center (444 North Main St). Replacement cards are $5.</p>
-	<ul>
-
-      <li>Student Fare: Proof of enrollment and ID (e.g., birth certificate, social security card) required.</li>
-     <li>Senior Fare: Individuals 65+ pay half the base fare with ID proof.</li>
-     <li>Medicare Card Holders: Fares are half the base fare for fixed routes.</li>
-      <li>Disability Fare: Individuals with disabilities pay half the base fare. A Medicare card or a physician’s verification is required.</li>
-	</ul>     
-      <p>All passes are non-refundable, non-replaceable, and non-exchangeable. For more info, call 901-523-8134.</p>
-
-  </section>
-	<section id="plan">
-	<h2>How to Plan Your Trip</h2>
- <h3>Using Google Maps Trip Planner for Your Bus Trip:</h3>
-	<ol>
-		<li>Open Google Maps:<br />  
-   	Access Google Maps via the app on your smartphone or <a href="https://maps.google.com">here</a>.</li>
-		<li> Enter Your Starting Point and Destination:<br />  
-   		<ul>
-				<li>Tap the search bar and input your starting location. You can type an address, a landmark, or use "Your location" for your current position.</li> 
-   			<li>Enter your destination in the same way.</li>
-			</ul></li>
-
-		<li> Select Directions:<br />  
-   		<ul>
-				<li>Tap the "Directions" button (blue arrow icon).</li>  
-   			<li>Ensure the transit icon (train or bus) is selected at the top to view public transit options.</li>
-			</ul></li>
-
-		<li>Set Your Departure or Arrival Time (Optional):<br />
-			<ul>
-				<li>Tap "Leave now" to adjust your trip for a specific time.</li>  
-   			<li>Choose "Depart at" or "Arrive by" and set the desired time and date.</li>
-			</ul></li>
-
-		<li>Review Transit Options:<br />
-			<ul>  
-   			<li>Google Maps will display a list of routes, including buses, trains, or a combination.</li>  
-   			<li>Check details like departure times, route numbers, stops, and travel duration.</li>
-			</ul></li>
-
-		<li>Select a Route:<br />  
-   		<ul>
-				<li>Tap your preferred route to view step-by-step instructions, including walking directions to the bus stop, transfer points, and final destination.</li>
-			</ul></li>
-
-		<li>Start Your Trip:<br />  
-			<ul>
-				<li>Hit "Start" to follow live navigation, which will provide updates on stops and notify you when to transfer or get off the bus.</li>
-			</ul></li> 
-
-		<li>Adjust Preferences (Optional):<br />  
-			<ul>
-				<li>Tap "Options" to filter routes by mode (e.g., bus only) or avoid certain features (e.g., fewer transfers).</li>
-			</ul></li>
-</ol>
-
-<h3>Tips:</h3>
-<ul>
-	<li>Real-Time Updates: Google Maps often shows live bus tracking and delays where available.</li> 
-	<li>Save Your Trip: Bookmark or save the route for future reference.</li>  
-	<li>Offline Maps: Download maps in advance if traveling to an area with limited connectivity.</li>  
-</ul>
-	</section>
-	<section id="ready">
-		<h2>Ready! by MATA</h2>
-			<p>Similar to ride services like Uber® or Lyft®, Ready! by MATA will pick you up and drop you off at any location within the zones indicated below. It will come directly to you at the same low cost as a bus ticket. While no advanced reservation is required, you have the option to book a ride using the Ready! by MATA app or by calling (901) 322-0466. The reservation line is available Monday through Saturday, 6 a.m. – 6:30 p.m. Reservations for Monday service must be made before 6:30 p.m. on Saturday.</p>
-			<p>Note: When booking through the reservation line, a representative will inform you of your expected pick-up time</p>
-		<h3>See Frayser Ready! area below:</h3>
-		<div class="ready-image-div">
-			<img src="./assets/ready-zone.jpg" alt="ready zone" class="ready-image"/>
-		</div>
-	</section>
-	<section id="wheresmybus">
-		<h2>Where's my bus?</h2>
-		<p>You can track real-time bus progress on MATA's website here: <a href="https://www.matatransit.com/how-do-you-travel/mata-tracker/">MATA Tracker</a></p>
-	</section>
-	<section id="getintouch">
-		<h2>Get in Touch</h2>
-			<p>MATA Call Center and Customer Relations Department<br /> 
-			(901) 522-9175 or <a href="mailto:ridersfirst@matatransit.com" alt="email">email here</a><br />
-			<br />
-			Hearing and Speech Impaired<br />
-			(901) 523-2817<br />
-			<br />
-			MATA Locations<br />
-			Administrative Offices<br />
-			One Commerce Square Building<br />
-			40 S. Main Street<br />
- 			<br />
-			Operations Center<br />
-			1370 Levee Road<br />
- 			<br />
-			Airways Transit Center<br />
-			3033 Airways Boulevard<br />
- 			<br />
-			American Way Transit Center<br />
-			3921 American Way<br />
- 			<br />
-			William Hudson Transit Center<br />
-			444 N. Main Street</p>
-
-	</section>
-	<p class="update-text">A project of Hack Memphis 2024<br />
-	Team Dataforce<br />
-	Justin Carter, Arlinda Ibezim, Sri Lakshmi Bhavani Mandalapu, Naim Hakeem, Antwoine Clark</p>
-
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>MATA Ambassadors</title>
+      <link rel="stylesheet" href="homepage.css"
+   </head>
+   <body>
+      <div class="navbar">
+         <img class="logo" src="./assets/logo.jpeg" alt="logo"/>
+         <ul>
+            <li><a href="#findaride">Find A Ride</a></li>
+            <!-- include info on how to see current available tickets, ticket prices, and how to get reduced fare here-->
+            <li><a href="#plan">Plan Your Trip</a></li>
+            <li><a href="#ready">Ready!</a></li>
+            <li><a href="#wheresmybus">Where's My Bus?</a></li>
+            <!--include info on trip planner, mata tracker, and omnilert -->
+            <li><a href="#getintouch">Get In Touch</a></li>
+         </ul>
+      </div>
+      <header class="hero">
+         <div class="hero-content">
+            <h1 class="hero-title">MATA Ambassadors<br />
+               <em>Frayser</em>
+            </h1>
+            <p class="hero-subtitle">Connecting communities, one ride at a time.</p>
+            <a href="#findaride" class="cta-btn">Get Started</a>
+         </div>
+      </header>
+      <section id="findaride">
+         <p class="update-text">Last Updated: November 16, 2024</p>
+         <h2>Find a Ride</h2>
+         <h3>Frayser Bus Routes:</h3>
+         <div class="ready-image-div">
+            <img src="./assets/bus-routes.jpg" alt="bus routes" class="bus-routes-image"/>
+         </div>
+         <h3>Buy A Ticket</h3>
+         <p><em>General note - the farebox at the front of the bus accepts cash fares and passes but does not provide change. Please have the exact fare ready, as bus operators cannot handle money or make change. Pennies and foreign objects are not accepted.</em></p>
+         <h3>Options to buy a ticket:</h3>
+         <ul>
+            <li><b>Online:</b> Visit <a href="https://www.go901transit.com/" target="_blank">Go 901 Transit</a> or the MATA Go901 mobile app to buy your ticket. Choose your ticket type, enter your payment details, and you’ll receive an e-ticket instantly that you can show directly from your phone or email when boarding.</li>
+            <li><b>At the Bus Station:</b> Visit the ticket counter at your nearest bus station. The staff will assist you in selecting your route and ticket type, and you can pay using cash, credit, or debit card.</li>
+            <li><b>Onboard:</b> Some bus services allow you to purchase tickets directly from the driver, usually with cash. However, it’s recommended to buy your ticket in advance to avoid delays.</li>
+         </ul>
+         <h3>Ticket Prices</h3>
+         <ul>
+            <li>Adult Base Fare  	<b>$1.00</b></li>
+            <li>Student Base Fare	<b>$1.00</b></li>
+            <li>Senior Citizens(see note) 	<b>$0.50</b></li>
+            <li>Senior Daily Fast Pass 	<b>$1.00</b></li>
+            <li>Individuals with Disabilities(see note) 	<b>$0.50</b></li>
+            <li>Daily Fast Pass	<b>$2.00</b></li>
+            <li>Student Daily Fast Pass	<b>$2.00</b></li>
+            <li>MATAplus Base Fare	<b>$2.00</b></li>
+         </ul>
+         <p>MATA offers reduced fares for students (grades 1-12), senior citizens (65+), and individuals with disabilities on fixed route buses and trolleys. A valid MATA ID card is required for eligibility, which costs $3 and can be processed at the William Hudson Transit Center (444 North Main St). Replacement cards are $5.</p>
+         <ul>
+            <li><b>Student Fare:</b> Proof of enrollment and ID (e.g., birth certificate, social security card) required.</li>
+            <li><b>Senior Fare:</b> Individuals 65+ pay half the base fare with ID proof.</li>
+            <li><b>Medicare Card Holders:</b> Fares are half the base fare for fixed routes.</li>
+            <li><b>Disability Fare:</b> Individuals with disabilities pay half the base fare. A Medicare card or a physician’s verification is required.</li>
+         </ul>
+         <p>All passes are non-refundable, non-replaceable, and non-exchangeable. For more info, call 901-523-8134.</p>
+      </section>
+      <section id="plan">
+         <h2>How to Plan Your Trip</h2>
+         <h3>Using Google Maps Trip Planner for Your Bus Trip:</h3>
+         <ol>
+            <li class="bold-title">Open Google Maps:<br />  
+               Access Google Maps via the app on your smartphone or <a href="https://maps.google.com">here</a>.
+            </li>
+            <li>
+               Enter Your Starting Point and Destination:<br />  
+               <ul>
+                  <li>Tap the search bar and input your starting location. You can type an address, a landmark, or use "Your location" for your current position.</li>
+                  <li>Enter your destination in the same way.</li>
+               </ul>
+            </li>
+            <li>
+               Select Directions:<br />  
+               <ul>
+                  <li>Tap the "Directions" button (blue arrow icon).</li>
+                  <li>Ensure the transit icon (train or bus) is selected at the top to view public transit options.</li>
+               </ul>
+            </li>
+            <li>
+               Set Your Departure or Arrival Time (Optional):<br />
+               <ul>
+                  <li>Tap "Leave now" to adjust your trip for a specific time.</li>
+                  <li>Choose "Depart at" or "Arrive by" and set the desired time and date.</li>
+               </ul>
+            </li>
+            <li>
+               Review Transit Options:<br />
+               <ul>
+                  <li>Google Maps will display a list of routes, including buses, trains, or a combination.</li>
+                  <li>Check details like departure times, route numbers, stops, and travel duration.</li>
+               </ul>
+            </li>
+            <li>
+               Select a Route:<br />  
+               <ul>
+                  <li>Tap your preferred route to view step-by-step instructions, including walking directions to the bus stop, transfer points, and final destination.</li>
+               </ul>
+            </li>
+            <li>
+               Start Your Trip:<br />  
+               <ul>
+                  <li>Hit "Start" to follow live navigation, which will provide updates on stops and notify you when to transfer or get off the bus.</li>
+               </ul>
+            </li>
+            <li>
+               Adjust Preferences (Optional):<br />  
+               <ul>
+                  <li>Tap "Options" to filter routes by mode (e.g., bus only) or avoid certain features (e.g., fewer transfers).</li>
+               </ul>
+            </li>
+         </ol>
+         <h3>Tips:</h3>
+         <ul>
+            <li>Real-Time Updates: Google Maps often shows live bus tracking and delays where available.</li>
+            <li>Save Your Trip: Bookmark or save the route for future reference.</li>
+            <li>Offline Maps: Download maps in advance if traveling to an area with limited connectivity.</li>
+         </ul>
+      </section>
+      <section id="ready">
+         <h2>Ready! by MATA</h2>
+         <p>Similar to ride services like Uber® or Lyft®, Ready! by MATA will pick you up and drop you off at any location within the zones indicated below. It will come directly to you at the same low cost as a bus ticket. While no advanced reservation is required, you have the option to book a ride using the Ready! by MATA app or by calling (901) 322-0466. The reservation line is available Monday through Saturday, 6 a.m. – 6:30 p.m. Reservations for Monday service must be made before 6:30 p.m. on Saturday.</p>
+         <p>Note: When booking through the reservation line, a representative will inform you of your expected pick-up time</p>
+         <h3>See Frayser Ready! area below:</h3>
+         <div class="ready-image-div">
+            <img src="./assets/ready-zone.jpg" alt="ready zone" class="ready-image"/>
+         </div>
+      </section>
+      <section id="wheresmybus">
+         <h2>Where's my bus?</h2>
+         <p>You can track real-time bus progress on MATA's website here: <a href="https://www.matatransit.com/how-do-you-travel/mata-tracker/">MATA Tracker</a></p>
+      </section>
+      <section id="getintouch">
+         <h2>Get in Touch</h2>
+         <p>MATA Call Center and Customer Relations Department<br /> 
+            (901) 522-9175 or <a href="mailto:ridersfirst@matatransit.com" alt="email">email here</a><br />
+            <br />
+            Hearing and Speech Impaired<br />
+            (901) 523-2817<br />
+            <br />
+            MATA Locations<br />
+            Administrative Offices<br />
+            One Commerce Square Building<br />
+            40 S. Main Street<br />
+            <br />
+            Operations Center<br />
+            1370 Levee Road<br />
+            <br />
+            Airways Transit Center<br />
+            3033 Airways Boulevard<br />
+            <br />
+            American Way Transit Center<br />
+            3921 American Way<br />
+            <br />
+            William Hudson Transit Center<br />
+            444 N. Main Street
+         </p>
+      </section>
+      <p class="update-text">A project of Hack Memphis 2024<br />
+         Team Dataforce<br />
+         Justin Carter, Arlinda Ibezim, Sri Lakshmi Bhavani Mandalapu, Naim Hakeem, Antwoine Clark
+      </p>
+   </body>
 </html>
